--- a/app/flex/WeFootball.mxml
+++ b/app/flex/WeFootball.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Application
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	xmlns:pom="com.wefootball.components.*"
+	xmlns:wfom="com.wefootball.components.*"
+	xmlns:accom="com.wefootball.components.account.*"
 	layout="vertical"
 	backgroundGradientColors="[#ffffff, #c0c0c0]"
 	horizontalAlign="center"
@@ -22,7 +23,7 @@
 ]]>
 </mx:Script>
 	<mx:ViewStack id="mainStack" width="100%" height="100%">
-		<pom:AccountBox login="showMain()" hideEffect="Fade" />
-		<pom:MainBox id="mainBox" showEffect="Fade" />
+		<accom:AccountBox login="showMain()" hideEffect="Fade" />
+		<wfom:MainBox id="mainBox" showEffect="Fade" />
 	</mx:ViewStack>
 </mx:Application>
