--- a/app/flex/com/wefootball/components/account/UpdateBox.mxml
+++ b/app/flex/com/wefootball/components/account/UpdateBox.mxml
@@ -83,7 +83,7 @@
 		]]>
 	</mx:Script>
 	
-	<mx:Form labelWidth="100" width="600">
+	<mx:Form>
 		<mx:FormItem label="昵称" required="true">
 			<mx:TextInput id="nicknameTI" editable="true" text="{userInfo.nickname}"/>
 		</mx:FormItem>
